# sharma0x.github.io

./: .gitignore  .impeccable.md  AGENTS.md  index.html  package.json  pnpm-lock.yaml  project.html  resume_data.json  tsconfig.node.json  vite-plugin-content.ts  vite.config.ts
.copilot/: PROBLEM.md
.github/workflows/: deploy.yml
_docs/projects/: llm_wiki_architecture_blog.md
content/blog/: calcom-architecture.md  llm-wiki-architecture.md  the-invisible-engine.md  why-i-switched-to-opencode.md
content/project/: calcom-architecture.md  clc3-tech.md  effective-octo-chainsaw.md  llm-wiki-architecture.md  portfolio-v3.md
docs/: me.info.md
docs/blogs/: The Invisible Engine: Why Your Productivity Stack is More Important Than Your Code.md  Why I Switched to OpenCode for Agentic Engineering.md
docs/projects/: calcom_architecture_blog.md
resume-generator/: .gitignore  README.md  pyproject.toml  requirements.txt
resume-generator/scripts/: generate.py
resume-generator/styles/: resume.css
resume-generator/templates/: resume.html.j2
resume-generator/templates/partials/: achievements.html.j2  education.html.j2  experience.html.j2  header.html.j2  projects.html.j2  publications.html.j2  skills.html.j2
scripts/: build-resume.py
src/: App.tsx  index.css  virtual-content-routes.d.ts
src/components/: ActivityHeatmap.tsx  ActivitySection.tsx  BlogsSection.tsx  CalDialog.tsx  FloatingIcons.tsx  ProjectsSection.tsx
src/data/: routes.ts
src/hooks/: useActivityData.ts
src/lib/: article.tsx
src/pages/: Blog.tsx  DesignSystem.tsx  Home.tsx  Project.tsx
(+1 files in other folders)
